--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-streamlit==1.10.0
-folium==0.12.0
-streamlit-folium==0.3.0
-requests==2.27.1
-beautifulsoup4==4.12.2
-pandas==1.4.1
-
+streamlit==0.89.0
+requests==2.26.0
+beautifulsoup4==4.9.3
+pandas==1.3.3
+numpy==1.21.2
+folium==0.12.1
+streamlit_folium==0.4.0
+plotly==5.3.1
 
