--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-streamlit==0.89.0
-requests==2.26.0
+streamlit==0.5.1
+requests==2.23.0
 beautifulsoup4==4.9.3
-pandas==1.3.3
+pandas==1.3.5
 numpy==1.21.2
-folium==0.12.1
-streamlit_folium==0.4.0
-plotly==5.16.1
+folium==0.8.0
+streamlit-folium==0.1.6
+plotly==5.7.0
+plotly-express==0.10.0
