--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-streamlit==0.5.1
-requests==2.23.0
-beautifulsoup4==4.9.3
-pandas==1.3.5
-numpy==1.21.2
-folium==0.8.0
-streamlit-folium==0.1.6
-plotly==5.7.0
-plotly-express==0.10.0
+streamlit
+requests
+beautifulsoup4
+pandas
+numpy
+folium
+streamlit-folium
+plotly
+plotly-express
